# Async_API_assigment_1

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  async_runner.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: movie_api.yml
async_service/: .gitignore  Dockerfile  README.md  __init__.py  __main__.py  main.py  requirements.txt
async_service/api/api_v1/: film.py
async_service/api/v1/: film.py  genre.py  person.py
async_service/core/: config.py  logger.py
async_service/db/: redis.py
async_service/models/: base.py  film.py  genre.py  person.py
async_service/serializers/: auth.py  base.py  film.py  genre.py  person.py
async_service/services/: base_service.py  cache.py  es_service.py  film.py  genre.py  jwt_utils.py  person.py
etl/: .dockerignore  Dockerfile  __main__.py  config.json  etl_index.json  etl_uploader.py  logger.py  main.py  migration_process.py  postgres_loader.py  requirements.txt  state_operator.py  transform_data.py  validation_classes.py
etl/config_validation/: config.py  db_settings.py  indexes.py  utils.py
etl/index_schemas/: genres.json  movies.json
etl/migration/: __init__.py  es_upload.py  film_work_process.py  genre_process.py  main_process.py  person_genre_person.py  person_genre_process.py  person_process.py
etl/migration/data_merge/: film_work_data_merger.py
etl/migration/es_upload/: upload_batch.py
etl/migration/es_upload/index_schemas/: persons.json
etl/migration/merge/: film_work_data_merger.py
etl/migration/pg_load/: data_loader.py  film_work_load_data.py
etl/migration/state/: state.py
etl/migration/state/storages/: json_file_storage.py
etl/state/: state.json  state.py  state_operator.py
nginx/: nginx.conf
nginx/configs/: site.conf
tests/: docker-compose.yml
tests/functional/: Dockerfile  conftest.py  entrypoint.sh  pytest.ini  requirements.txt  settings.py  test_config.json
tests/functional/core/: settings.py
tests/functional/src/: search_test.py  test_films.py  test_genre.py  test_persons.py
tests/functional/testdata/: film.json  genres.json  movies.json  persons.json
tests/functional/testdata/indexes/: genres.json  movies.json
tests/testdata/: movies.json
tests/testdata/index_schemas/: movies.json
