[tool.poetry]
name = "sprint_4"
version = "0.1.0"
description = ""
authors = ["DmitryK <kachkindmitry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
elasticsearch = "^7.17.1"
fastapi = "^0.75.0"
aioredis = "^2.0.1"
orjson = "^3.6.7"
elasticsearch-dsl = "^7.4.0"
uvicorn = "^0.17.6"
python-dotenv = "^0.19.2"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.8"}
backoff = "^1.11.1"
aiohttp = "^3.8.1"
redis = "^4.1.4"
PyJWT = "^2.3.0"
mypy = "^0.950"
flake8 = "^4.0.1"



[tool.poetry.dev-dependencies]
elasticsearch = "^7.17.1"
fastapi = "^0.75.0"
aioredis = "^2.0.1"
orjson = "^3.6.7"
elasticsearch-dsl = "^7.4.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.8"}
uvicorn = "^0.17.6"
python-dotenv = "^0.19.2"
backoff = "^1.11.1"
psycopg2-binary = "^2.9.3"
schedule = "^1.1.0"
aiohttp = "^3.8.1"
aiofiles = "^0.8.0"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.2"
PyJWT = "^2.3.0"


[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
multi_line_output = 3


[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true


[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "global-statement",
]

ignored-modules = ["pydantic", "orjson"]
good-names = []

[tool.pylint.similarities]
ignore-imports = true
ignore-docstrings = true
ignore-comments = true


[tool.pytest.ini_options]
asyncio_mode= "strict"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)-5.5s [%(name)s] %(message)s"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
